new implementation of ParseGenerics